<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:padding="5dp"
    android:layout_row="2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:contentDescription="@string/iv_logo"
        android:src="@drawable/splash"
        />

    <TableRow
        android:layout_marginTop="5dp"
        android:gravity="center">
        <com.google.android.material.imageview.ShapeableImageView
            android:background="@drawable/nmet_selector"
            android:id="@+id/iv_nmet"
            style="@style/homeCardStyle"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:background="@drawable/cet4_selector"
            android:id="@+id/iv_cet4"
            android:contentDescription="@string/iv_cet4"
            style="@style/homeCardStyle"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <com.google.android.material.imageview.ShapeableImageView
            android:background="@drawable/cet6_selector"
            android:id="@+id/iv_cet6"
            style="@style/homeCardStyle"
            android:contentDescription="@string/iv_cet6"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:background="@drawable/ietsl_selector"
            android:id="@+id/iv_ietsl"
            style="@style/homeCardStyle"
            android:contentDescription="@string/iv_ietsl"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <com.google.android.material.imageview.ShapeableImageView
            android:background="@drawable/gre_selector"
            android:id="@+id/iv_gre"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="140dp"

            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/radiusImage"
            android:contentDescription="@string/iv_gre"/>
    </TableRow>

</TableLayout>