<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.login.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/back_radius_12">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_lr"
            android:layout_marginEnd="@dimen/margin_lr"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <View
                    android:layout_width="60dp"
                    android:layout_height="@dimen/margin_item"
                    android:layout_marginStart="@dimen/margin_lr"
                    android:layout_marginTop="26dp"
                    android:background="?attr/colorTertiaryContainer" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lr"
                    android:text="@string/login"
                    android:textColor="#4F4646"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_background"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_person_24" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_item"
                    android:background="@null"
                    android:hint="@string/input_account" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/margin_lr"
                android:background="@drawable/edit_background"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_lock"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_lock_24" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_item"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:background="#AAADAE" />

                <ImageView
                    android:id="@+id/img_pwd_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_item"
                    android:layout_gravity="center_vertical|end"
                    android:background="@drawable/twotone_visibility_off_24" />
            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="记住密码"
                android:layout_marginEnd="48dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="360dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/margin_lr"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="?attr/colorPrimary"
                android:elevation="@dimen/margin_item"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/register_back" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_lr"
        android:text="@string/go_register"
        android:textColor="#39413F" />
</RelativeLayout>